# mos-6502

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
cmake/: compiler_warnings.cmake
docs/: design.md  plan.md
include/: addressing.h  cpu.h
src/: CMakeLists.txt  cpu.c  cpu.h  emulator.c  instructions.c  instructions.h  main.c  memory.c  memory.h
